<resources>
    <string name="app_name">StackOverFlow</string>

    <string name="vpvote_title">Upvotes</string>
    <string name="name_title">Created by</string>
    <string name="date_title">Created On</string>

    <string name="vpvote_default">0</string>
    <string name="name_default">Name</string>
    <string name="date_default">Date</string>

    <string name="name_pretext">Name: </string>
    <string name="created_pretext">Created on </string>
    <string name="personal_naviagtion_title">Personal</string>
    <string name="public_navigation_title">Public</string>
    <string name="logout">logout</string>
    <string name="logout_dialog_tile">Logout</string>
    <string name="logout_message">logging out..Please Wait…</string>
    <string name="logout_error">Unable to Logout</string>
    <string name="listing_signin_prompt">You haven\'t signed in yet. Click to Sign-In</string>

</resources>
