<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                   android:layout_width="match_parent"
                                   android:layout_height="wrap_content"
                                   android:layout_margin="5dp">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D3D3D3">
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textSize="24sp"
                  android:textStyle="bold"
                  android:id="@+id/title_container"
                  android:gravity="center"/>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="100dp"
                      android:orientation="horizontal"
                      android:weightSum="3">
            <RelativeLayout android:layout_width="0dp"
                          android:layout_height="wrap_content"
                          android:layout_gravity="center"
                          android:layout_weight="1">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textSize="22sp"
                          android:textStyle="bold"
                          android:singleLine="true"
                          android:id="@+id/e"
                          android:layout_centerHorizontal="true"
                          android:text="@string/vpvote_title"/>
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:singleLine="true"
                          android:layout_below="@id/e"
                          android:layout_centerHorizontal="true"
                          android:text="@string/vpvote_default"
                          android:id="@+id/upvote_container"/>
            </RelativeLayout>
            <RelativeLayout android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textSize="22sp"
                          android:textStyle="bold"
                          android:singleLine="true"
                          android:id="@+id/e1"
                          android:layout_centerHorizontal="true"
                          android:text="@string/name_title"/>
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:singleLine="true"
                          android:layout_below="@id/e1"
                          android:layout_centerHorizontal="true"
                          android:text="@string/name_default"
                          android:id="@+id/name_container"/>
            </RelativeLayout>
            <RelativeLayout android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textSize="22sp"
                          android:textStyle="bold"
                          android:singleLine="true"
                          android:id="@+id/e2"
                          android:layout_centerHorizontal="true"
                          android:text="@string/date_title"/>
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:singleLine="true"
                          android:layout_below="@id/e2"
                          android:layout_centerHorizontal="true"
                          android:text="@string/date_default"
                          android:id="@+id/time_container"/>
            </RelativeLayout>
        </LinearLayout>
        <com.google.android.flexbox.FlexboxLayout android:layout_width="match_parent"
                                                  android:layout_height="wrap_content"
                                                  android:id="@+id/tag_container"
        android:paddingBottom="10dp"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>
